иправления задания(урок 6)